--- a/src/components/Narcissistic/Narcissistic.css
+++ b/src/components/Narcissistic/Narcissistic.css
@@ -1,6 +1,6 @@
 .nar_container {
     width: 100vw;
-    height: 100vh;
+    height: fit-content;
     max-width: 100%;
     display: flex;
     justify-content: center;
