--- a/src/components/Munchausen/Munchausen.css
+++ b/src/components/Munchausen/Munchausen.css
@@ -1,7 +1,7 @@
 .mun_container {
     width: 100vw;
     max-width: 100%;
-    height: 80vh;
+    height: fit-content;
     display: flex;
     justify-content: center;
 }
